parser/ProgramParser.py
# Generated from Program.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ProgramParser ( Parser ):

    grammarFileName = "Program.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class '", "'{'", "'}'", "'#'", "','", 
                     "'->'", "';'", "'let'", "'='", "'if'", "'for'", "'in'", 
                     "'while'", "'('", "')'", "'+'", "'-'", "'*'", "'.'", 
                     "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "AND", "OR", "COMPARISON_OPERATOR", "ID", "INT", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_first = 1
    RULE_class_decl = 2
    RULE_func_decl = 3
    RULE_func_type = 4
    RULE_func_head = 5
    RULE_block = 6
    RULE_class_var_decl = 7
    RULE_statement = 8
    RULE_var_decl = 9
    RULE_if_stat = 10
    RULE_for_stat = 11
    RULE_while_stat = 12
    RULE_set_stat = 13
    RULE_condition = 14
    RULE_term = 15
    RULE_factor = 16
    RULE_comparison = 17
    RULE_condition_value = 18
    RULE_expr = 19
    RULE_multExpr = 20
    RULE_atom = 21
    RULE_func_call = 22
    RULE_class_object = 23
    RULE_literal = 24

    ruleNames =  [ "prog", "first", "class_decl", "func_decl", "func_type", 
                   "func_head", "block", "class_var_decl", "statement", 
                   "var_decl", "if_stat", "for_stat", "while_stat", "set_stat", 
                   "condition", "term", "factor", "comparison", "condition_value", 
                   "expr", "multExpr", "atom", "func_call", "class_object", 
                   "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    AND=20
    OR=21
    COMPARISON_OPERATOR=22
    ID=23
    INT=24
    NEWLINE=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def first(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.FirstContext)
            else:
                return self.getTypedRuleContext(ProgramParser.FirstContext,i)


        def getRuleIndex(self):
            return ProgramParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ProgramParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self.first()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 25193746) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FirstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decl(self):
            return self.getTypedRuleContext(ProgramParser.Class_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(ProgramParser.Func_declContext,0)


        def statement(self):
            return self.getTypedRuleContext(ProgramParser.StatementContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_first

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFirst" ):
                listener.enterFirst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFirst" ):
                listener.exitFirst(self)




    def first(self):

        localctx = ProgramParser.FirstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_first)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.class_decl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.func_decl()
                pass
            elif token in [8, 10, 11, 13, 14, 23, 24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ProgramParser.ID, 0)

        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.Func_declContext)
            else:
                return self.getTypedRuleContext(ProgramParser.Func_declContext,i)


        def class_var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.Class_var_declContext)
            else:
                return self.getTypedRuleContext(ProgramParser.Class_var_declContext,i)


        def getRuleIndex(self):
            return ProgramParser.RULE_class_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_decl" ):
                listener.enterClass_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_decl" ):
                listener.exitClass_decl(self)




    def class_decl(self):

        localctx = ProgramParser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ProgramParser.T__0)
            self.state = 61
            self.match(ProgramParser.ID)
            self.state = 62
            self.match(ProgramParser.T__1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4 or _la==23:
                self.state = 65
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 63
                    self.func_decl()
                    pass
                elif token in [23]:
                    self.state = 64
                    self.class_var_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(ProgramParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_type(self):
            return self.getTypedRuleContext(ProgramParser.Func_typeContext,0)


        def func_head(self):
            return self.getTypedRuleContext(ProgramParser.Func_headContext,0)


        def block(self):
            return self.getTypedRuleContext(ProgramParser.BlockContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)




    def func_decl(self):

        localctx = ProgramParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.func_type()
            self.state = 73
            self.func_head()
            self.state = 74
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ProgramParser.ID)
            else:
                return self.getToken(ProgramParser.ID, i)

        def getRuleIndex(self):
            return ProgramParser.RULE_func_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_type" ):
                listener.enterFunc_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_type" ):
                listener.exitFunc_type(self)




    def func_type(self):

        localctx = ProgramParser.Func_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(ProgramParser.T__3)
            self.state = 77
            self.match(ProgramParser.ID)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 78
                self.match(ProgramParser.T__4)
                self.state = 79
                self.match(ProgramParser.ID)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(ProgramParser.T__5)
            self.state = 86
            self.match(ProgramParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_headContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ProgramParser.ID)
            else:
                return self.getToken(ProgramParser.ID, i)

        def getRuleIndex(self):
            return ProgramParser.RULE_func_head

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_head" ):
                listener.enterFunc_head(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_head" ):
                listener.exitFunc_head(self)




    def func_head(self):

        localctx = ProgramParser.Func_headContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_head)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(ProgramParser.ID)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 89
                self.match(ProgramParser.ID)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.StatementContext)
            else:
                return self.getTypedRuleContext(ProgramParser.StatementContext,i)


        def getRuleIndex(self):
            return ProgramParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = ProgramParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(ProgramParser.T__1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 25193728) != 0):
                self.state = 96
                self.statement()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(ProgramParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ProgramParser.ID)
            else:
                return self.getToken(ProgramParser.ID, i)

        def getRuleIndex(self):
            return ProgramParser.RULE_class_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_var_decl" ):
                listener.enterClass_var_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_var_decl" ):
                listener.exitClass_var_decl(self)




    def class_var_decl(self):

        localctx = ProgramParser.Class_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_class_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(ProgramParser.ID)
            self.state = 105
            self.match(ProgramParser.ID)
            self.state = 106
            self.match(ProgramParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(ProgramParser.Var_declContext,0)


        def if_stat(self):
            return self.getTypedRuleContext(ProgramParser.If_statContext,0)


        def for_stat(self):
            return self.getTypedRuleContext(ProgramParser.For_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(ProgramParser.While_statContext,0)


        def func_call(self):
            return self.getTypedRuleContext(ProgramParser.Func_callContext,0)


        def set_stat(self):
            return self.getTypedRuleContext(ProgramParser.Set_statContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = ProgramParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.if_stat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.for_stat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.while_stat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.func_call()
                self.state = 113
                self.match(ProgramParser.T__6)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 115
                self.set_stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ProgramParser.ID)
            else:
                return self.getToken(ProgramParser.ID, i)

        def expr(self):
            return self.getTypedRuleContext(ProgramParser.ExprContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = ProgramParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(ProgramParser.T__7)
            self.state = 119
            self.match(ProgramParser.ID)
            self.state = 120
            self.match(ProgramParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 121
                self.match(ProgramParser.T__8)
                self.state = 122
                self.expr()


            self.state = 125
            self.match(ProgramParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ProgramParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(ProgramParser.BlockContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_if_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stat" ):
                listener.enterIf_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stat" ):
                listener.exitIf_stat(self)




    def if_stat(self):

        localctx = ProgramParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_if_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(ProgramParser.T__9)
            self.state = 128
            self.expr()
            self.state = 129
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.ExprContext)
            else:
                return self.getTypedRuleContext(ProgramParser.ExprContext,i)


        def block(self):
            return self.getTypedRuleContext(ProgramParser.BlockContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_for_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_stat" ):
                listener.enterFor_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_stat" ):
                listener.exitFor_stat(self)




    def for_stat(self):

        localctx = ProgramParser.For_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_for_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(ProgramParser.T__10)
            self.state = 132
            self.expr()
            self.state = 133
            self.match(ProgramParser.T__11)
            self.state = 134
            self.expr()
            self.state = 135
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ProgramParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(ProgramParser.BlockContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_while_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stat" ):
                listener.enterWhile_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stat" ):
                listener.exitWhile_stat(self)




    def while_stat(self):

        localctx = ProgramParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(ProgramParser.T__12)
            self.state = 138
            self.expr()
            self.state = 139
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Set_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.ExprContext)
            else:
                return self.getTypedRuleContext(ProgramParser.ExprContext,i)


        def getRuleIndex(self):
            return ProgramParser.RULE_set_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet_stat" ):
                listener.enterSet_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet_stat" ):
                listener.exitSet_stat(self)




    def set_stat(self):

        localctx = ProgramParser.Set_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_set_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.expr()
            self.state = 142
            self.match(ProgramParser.T__8)
            self.state = 143
            self.expr()
            self.state = 144
            self.match(ProgramParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.TermContext)
            else:
                return self.getTypedRuleContext(ProgramParser.TermContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(ProgramParser.OR)
            else:
                return self.getToken(ProgramParser.OR, i)

        def getRuleIndex(self):
            return ProgramParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = ProgramParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.term()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 147
                self.match(ProgramParser.OR)
                self.state = 148
                self.term()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.FactorContext)
            else:
                return self.getTypedRuleContext(ProgramParser.FactorContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(ProgramParser.AND)
            else:
                return self.getToken(ProgramParser.AND, i)

        def getRuleIndex(self):
            return ProgramParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = ProgramParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.factor()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 155
                self.match(ProgramParser.AND)
                self.state = 156
                self.factor()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison(self):
            return self.getTypedRuleContext(ProgramParser.ComparisonContext,0)


        def condition(self):
            return self.getTypedRuleContext(ProgramParser.ConditionContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = ProgramParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_factor)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.comparison()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(ProgramParser.T__13)
                self.state = 164
                self.condition()
                self.state = 165
                self.match(ProgramParser.T__14)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.ExprContext)
            else:
                return self.getTypedRuleContext(ProgramParser.ExprContext,i)


        def COMPARISON_OPERATOR(self):
            return self.getToken(ProgramParser.COMPARISON_OPERATOR, 0)

        def getRuleIndex(self):
            return ProgramParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)




    def comparison(self):

        localctx = ProgramParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_comparison)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.expr()
            self.state = 170
            self.match(ProgramParser.COMPARISON_OPERATOR)
            self.state = 171
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ProgramParser.ConditionContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_condition_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_value" ):
                listener.enterCondition_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_value" ):
                listener.exitCondition_value(self)




    def condition_value(self):
